[gd_scene load_steps=32 format=3 uid="uid://bjismv0ossx4h"]

[ext_resource type="Script" uid="uid://csj6mmf3uhm2" path="res://scripts/Player/player.gd" id="1_qlg0r"]
[ext_resource type="Texture2D" uid="uid://d1sfdxcnyun0b" path="res://assets/Player/Stab.png" id="2_d2wvv"]
[ext_resource type="Texture2D" uid="uid://sdl1yr4fpsgk" path="res://assets/Player/idle.png" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://djfowxke0m2cc" path="res://assets/Player/run.png" id="3_qhqgy"]
[ext_resource type="PackedScene" uid="uid://t3qpntly515h" path="res://scenes/attack.tscn" id="4_dqkch"]
[ext_resource type="Script" uid="uid://v8aopihhnoxk" path="res://scripts/component scripts and classes/State related/state_machine_Class.gd" id="4_qlg0r"]
[ext_resource type="Texture2D" uid="uid://0ef5m0nxk3iy" path="res://assets/Player/PlayerSpriteWIPS.png" id="5_3v2ag"]
[ext_resource type="Script" uid="uid://i7gx1emvm6lv" path="res://scripts/Player/player_movement_handler.gd" id="6_jej6c"]
[ext_resource type="Script" uid="uid://dlj1yjr2frgoo" path="res://scripts/Player/States/idle_state.gd" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://cr3mm1w8t80m5" path="res://scripts/Player/States/run_state.gd" id="7_fjrip"]
[ext_resource type="Script" uid="uid://b0c2ov2mihkwp" path="res://scripts/Player/States/fall_state.gd" id="8_smehm"]
[ext_resource type="Script" uid="uid://b5so0dq1n5he6" path="res://scripts/Player/States/jump_state.gd" id="9_ur7pv"]
[ext_resource type="Script" uid="uid://c8pv7xodr6gpy" path="res://scripts/Player/States/attack_state.gd" id="11_d2wvv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjrip"]
size = Vector2(7, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_d2wvv")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_d2wvv")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("5_3v2ag")
region = Rect2(0, 200, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("5_3v2ag")
region = Rect2(80, 200, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(150, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 0, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_g2els")
region = Rect2(20, 0, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_g2els")
region = Rect2(40, 0, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_g2els")
region = Rect2(60, 0, 20, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_qhqgy")
region = Rect2(30, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(60, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(90, 0, 30, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_qhqgy")
region = Rect2(120, 0, 30, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_fjrip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": false,
"name": &"Attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(5, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dqkch"]
size = Vector2(18, 7.5)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_d2wvv"]
points = PackedVector2Array(0, -19, -13, -21, -5, -3, -6, 15, 15, 18, 15, 1)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("movement_handler")]
z_index = 5
scale = Vector2(1.5, 1.5)
collision_layer = 2
script = ExtResource("1_qlg0r")
movement_handler = NodePath("movement_handler")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -11.5)
shape = SubResource("RectangleShape2D_fjrip")

[node name="animations" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_fjrip")
animation = &"Attack2"
autoplay = "Idle"

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, -12.5)
shape = SubResource("RectangleShape2D_qhqgy")
debug_color = Color(0.824637, 0.388991, 0.23875, 0.42)

[node name="Timer" type="Timer" parent="Hitbox"]

[node name="movement_handler" type="Node" parent="."]
script = ExtResource("6_jej6c")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("4_qlg0r")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="state_machine" node_paths=PackedStringArray("run_state", "fall_state", "jump_state", "attack_state", "attack2_state")]
script = ExtResource("6_tuyoq")
run_state = NodePath("../Run")
fall_state = NodePath("../Fall")
jump_state = NodePath("../Jump")
attack_state = NodePath("../Attack1")
attack2_state = NodePath("../Attack2")
animation_name = "Idle"

[node name="Run" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "fall_state", "jump_state")]
script = ExtResource("7_fjrip")
idle_state = NodePath("../Idle")
fall_state = NodePath("../Fall")
jump_state = NodePath("../Jump")
animation_name = "Run"

[node name="Fall" type="Node" parent="state_machine" node_paths=PackedStringArray("run_state", "idle_state")]
script = ExtResource("8_smehm")
run_state = NodePath("../Run")
idle_state = NodePath("../Idle")
animation_name = "Fall"

[node name="Jump" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "run_state")]
script = ExtResource("9_ur7pv")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
run_state = NodePath("../Run")
animation_name = "Fall"

[node name="Attack1" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "aoe")]
script = ExtResource("11_d2wvv")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
aoe = NodePath("../../attack1AOE")
Knockback = 10
Duration = 0.5
animation_name = "Attack"

[node name="Attack2" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "aoe")]
script = ExtResource("11_d2wvv")
fall_state = NodePath("../Fall")
idle_state = NodePath("../Idle")
aoe = NodePath("../../attack2AOE")
Damage = 3
Knockback = 20
Frame_number = 2
animation_name = "Attack2"

[node name="attack1AOE" parent="." instance=ExtResource("4_dqkch")]
collision_layer = 0
collision_mask = 4

[node name="shape" type="CollisionShape2D" parent="attack1AOE"]
position = Vector2(19, -12)
shape = SubResource("RectangleShape2D_dqkch")

[node name="attack2AOE" parent="." instance=ExtResource("4_dqkch")]
collision_layer = 0
collision_mask = 4

[node name="shape" type="CollisionShape2D" parent="attack2AOE"]
position = Vector2(19, -12)
shape = SubResource("ConvexPolygonShape2D_d2wvv")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Hitbox/Timer" to="." method="_on_timer_timeout"]
